[package]
name = "chai-framework"
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "A framework for creating TUI SSH programs in Rust"
keywords = ["tui", "ssh", "framework", "ratatui", "terminal"]
categories = ["command-line-interface", "network-programming"]

[dependencies]
anyhow = "1.0.100"
ratatui = { version = "0.30.0", features = ["crossterm"] }
russh = "0.57.0"
tokio = "1.48.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
